--- a/PMM/award/spirit.yml
+++ b/PMM/award/spirit.yml
@@ -46,8 +46,8 @@ dynamic_collections:
     type: number
     sync: true
     data:
-#      starting: current_year-5
-#      ending: current_year
+      starting: current_year-5
+      ending: current_year
     title_format: Independent Spirit Awards <<key_name>>
     template:
       - use_year_collections
