--- a/PMM/award/sundance.yml
+++ b/PMM/award/sundance.yml
@@ -56,8 +56,8 @@ dynamic_collections:
     type: number
     sync: true
     data:
-#      starting: current_year-5
-#      ending: current_year
+      starting: current_year-5
+      ending: current_year
     title_format: Sundance Film Festival <<key_name>>
     template:
       - use_year_collections
