--- a/PMM/movie/country.yml
+++ b/PMM/movie/country.yml
@@ -159,7 +159,7 @@ dynamic_collections:
       # - Holy See                      # va
       # - Honduras                      # hn
       - Hong Kong                     # hk
-      # - Hungary                       # hu
+      - Hungary                       # hu
       # - Iceland                       # is
       - India                         # in
       # - Indonesia                     # id
