--- a/PMM/show/country.yml
+++ b/PMM/show/country.yml
@@ -72,18 +72,18 @@ dynamic_collections:
       # - ai     # Anguilla
       # - aq     # Antarctica
       # - ag     # Antigua
-      - ar     # Argentina
+      # - ar     # Argentina
       # - am     # Armenia
       # - aw     # Aruba
       - au     # Australia
-      - at     # Austria
+      # - at     # Austria
       # - az     # Azerbaijan
-      - bs     # Bahamas
+      # - bs     # Bahamas
       # - bh     # Bahrain
       # - bd     # Bangladesh
       # - bb     # Barbados
       # - by     # Belarus
-      - be     # Belgium
+      # - be     # Belgium
       # - bz     # Belize
       # - bj     # Benin
       # - bm     # Bermuda
@@ -93,9 +93,9 @@ dynamic_collections:
       # - ba     # Bosnia and Herzegovina
       # - bw     # Botswana
       # - bv     # Bouvet Island
-      - br     # Brazil
+      # - br     # Brazil
       # - bn     # Brunei
-      - bg     # Bulgaria
+      # - bg     # Bulgaria
       # - bf     # Burkina Faso
       # - bi     # Burundi
       # - cv     # Cabo Verde
@@ -105,31 +105,31 @@ dynamic_collections:
       # - ky     # Cayman Islands
       # - cf     # Central African Republic
       # - td     # Chad
-      - cl     # Chile
-      - cn     # China
+      # - cl     # Chile
+      # - cn     # China
       # - cx     # Christmas Island
       # - cc     # Cocos (Keeling) Islands
       # - co     # Colombia
       # - km     # Comoros
       # - cg     # Congo
       # - ck     # Cook Islands
-      - cr     # Costa Rica
+      # - cr     # Costa Rica
       # - ci     # Côte d'Ivoire
-      - hr     # Croatia
+      # - hr     # Croatia
       # - cu     # Cuba
       # - cw     # Curaçao
       # - cy     # Cyprus
-      - cz     # Czech Republic
+      # - cz     # Czech Republic
       - dk     # Denmark
       # - dj     # Djibouti
       # - dm     # Dominica
-      - do     # Dominican Republic
+      # - do     # Dominican Republic
       # - ec     # Ecuador
-      - eg     # Egypt
+      # - eg     # Egypt
       # - sv     # El Salvador
       # - gq     # Equatorial Guinea
       # - er     # Eritrea
-      - ee     # Estonia
+      # - ee     # Estonia
       # - sz     # Eswatini
       # - et     # Ethiopia
       # - fk     # Falkland Islands
@@ -160,9 +160,9 @@ dynamic_collections:
       # - hn     # Honduras
       - hk     # Hong Kong
       - hu     # Hungary
-      - is     # Iceland
+      # - is     # Iceland
       - in     # India
-      - id     # Indonesia
+      # - id     # Indonesia
       - ir     # Iran
       # - iq     # Iraq
       - ie     # Ireland
@@ -180,18 +180,18 @@ dynamic_collections:
       # - kw     # Kuwait
       # - kg     # Kyrgyzstan
       # - la     # Lao
-      - lv     # Latvia
+      # - lv     # Latvia
       # - lb     # Lebanon
       # - ls     # Lesotho
       # - lr     # Liberia
       # - ly     # Libya
       # - li     # Liechtenstein
       # - lt     # Lithuania
-      - lu     # Luxembourg
+      # - lu     # Luxembourg
       # - mo     # Macao
       # - mg     # Madagascar
       # - mw     # Malawi
-      - my     # Malaysia
+      # - my     # Malaysia
       # - mv     # Maldives
       # - ml     # Mali
       # - mt     # Malta
@@ -207,7 +207,7 @@ dynamic_collections:
       # - mn     # Mongolia
       # - me     # Montenegro
       # - ms     # Montserrat
-      - ma     # Morocco
+      # - ma     # Morocco
       # - mz     # Mozambique
       # - mm     # Myanmar
       # - na     # Namibia
@@ -224,19 +224,19 @@ dynamic_collections:
       # - mk     # Macedonia
       - no     # Norway
       # - om     # Oman
-      - pk     # Pakistan
+      # - pk     # Pakistan
       # - pw     # Palau
       # - ps     # Palestine
-      - pa     # Panama
+      # - pa     # Panama
       # - pg     # New Guinea
       # - py     # Paraguay
-      - pe     # Peru
-      - ph     # Philippines
+      # - pe     # Peru
+      # - ph     # Philippines
       # - pn     # Pitcairn
       - pl     # Poland
-      - pt     # Portugal
+      # - pt     # Portugal
       # - pr     # Puerto Rico
-      - qa     # Qatar
+      # - qa     # Qatar
       # - re     # Réunion
       - ro     # Romania
       - ru     # Russia
@@ -246,29 +246,29 @@ dynamic_collections:
       # - ws     # Samoa
       # - sm     # San Marino
       # - st     # Sao Tome and Principe
-      - sa     # Saudi Arabia
+      # - sa     # Saudi Arabia
       # - sn     # Senegal
-      - rs     # Serbia
+      # - rs     # Serbia
       # - sc     # Seychelles
       # - sl     # Sierra Leone
-      - sg     # Singapore
+      # - sg     # Singapore
       # - sk     # Slovakia
       # - si     # Slovenia
       # - sb     # Solomon Islands
       # - so     # Somalia
-      - za     # South Africa
+      # - za     # South Africa
       # - ss     # South Sudan
       - es     # Spain
-      - lk     # Sri Lanka
+      # - lk     # Sri Lanka
       # - sd     # Sudan
       # - sr     # Suriname
       - se     # Sweden
-      - ch     # Switzerland
+      # - ch     # Switzerland
       # - sy     # Syria
       # - tw     # Taiwan
       # - tj     # Tajikistan
       # - tz     # Tanzania
-      - th     # Thailand
+      # - th     # Thailand
       # - tl     # Timor-Leste
       # - tg     # Togo
       # - tk     # Tokelau
@@ -280,15 +280,15 @@ dynamic_collections:
       # - tc     # Turks and Caicos
       # - tv     # Tuvalu
       # - ug     # Uganda
-      - ua     # Ukraine
-      - ae     # United Arab Emirates
+      # - ua     # Ukraine
+      # - ae     # United Arab Emirates
       - gb     # United Kingdom
       - us     # United States of America
       # - uy     # Uruguay
       # - uz     # Uzbekistan
       # - vu     # Vanuatu
       # - ve     # Venezuela
-      - vn     # Vietnam
+      # - vn     # Vietnam
       # - ye     # Yemen
       # - zm     # Zambia
       # - zw     # Zimbabwe
