--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -70,9 +70,12 @@ dynamic_collections:
         - Action & adventure
         - Action and Adventure
         - Action and adventure
+      Animation:
+        - Anime
       Biography:
         - Biopic
       Family:
+        - Children
         - Kids & Family
       Fantasy:
         - SciFi & Fantasy
