--- a/PMM/templates.yml
+++ b/PMM/templates.yml
@@ -153,6 +153,7 @@ templates:
     optional:
       - image
     cache_builders: 1
+    limit: all
     sync_mode: sync
     collection_order: <<collection_order>>
     ignore_blank_results: true
