--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -53,8 +53,14 @@ dynamic_collections:
     template:
       - genre_dynamic
       - shared
+    other_template:
+      - other_collection
+      - genre_dynamic
+      - shared
     title_override:
       Biography: Biopic
+    exclude:
+      - Reality
     addons:
       Action:
         - Action/Adventure
@@ -72,8 +78,8 @@ dynamic_collections:
         - Action and adventure
       Animation:
         - Anime
-      Biography:
-        - Biopic
+      Documentary:
+        - News
       Family:
         - Children
         - Kids & Family
@@ -95,5 +101,7 @@ dynamic_collections:
         - Sci-Fi & Fantasy
       Talk Show:
         - Talk
+      Thriller:
+        - Suspense
       War:
         - War & Politics
