--- a/PMM/movie/country.yml
+++ b/PMM/movie/country.yml
@@ -283,7 +283,7 @@ dynamic_collections:
       # - Ukraine                       # ua
       # - United Arab Emirates          # ae
       - United Kingdom                # gb
-      - United States of America      # us
+      # - United States of America      # us
       # - Uruguay                       # uy
       # - Uzbekistan                    # uz
       # - Vanuatu                       # vu
