--- a/PMM/show/country.yml
+++ b/PMM/show/country.yml
@@ -283,7 +283,7 @@ dynamic_collections:
       # - ua     # Ukraine
       # - ae     # United Arab Emirates
       - gb     # United Kingdom
-      - us     # United States of America
+      # - us     # United States of America
       # - uy     # Uruguay
       # - uz     # Uzbekistan
       # - vu     # Vanuatu
