--- a/PMM/movie/country.yml
+++ b/PMM/movie/country.yml
@@ -263,7 +263,7 @@ dynamic_collections:
       # - Sudan                         # sd
       # - Suriname                      # sr
       - Sweden                        # se
-      # - Switzerland                   # ch
+      - Switzerland                   # ch
       # - Syria                         # sy
       # - Taiwan                        # tw
       # - Tajikistan                    # tj
