--- a/PMM/show/country.yml
+++ b/PMM/show/country.yml
@@ -263,7 +263,7 @@ dynamic_collections:
       # - sd     # Sudan
       # - sr     # Suriname
       - se     # Sweden
-      # - ch     # Switzerland
+      - ch     # Switzerland
       # - sy     # Syria
       # - tw     # Taiwan
       # - tj     # Tajikistan
