--- a/PMM/award/emmy.yml
+++ b/PMM/award/emmy.yml
@@ -48,6 +48,26 @@ templates:
     imdb_list: https://www.imdb.com/search/title/?release_date=<<key>>-01-01,<<key>>-12-31&groups=emmy_winner&sort=<<imdb_sort>>
     url_poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/award/emmys/winner/<<key>>.jpg
 
+collections:
+
+  Emmy Winners:
+    template:
+      - name: award
+        image: emmys/winner
+      - name: shared
+        sort: Emmys !1
+    imdb_list: https://www.imdb.com/search/title/?groups=emmy_winner
+    summary: Emmy Winners
+
+  Emmy Nominees:
+    template:
+      - name: award
+        image: emmys/nomination
+      - name: shared
+        sort: Emmys !2
+    imdb_list: https://www.imdb.com/search/title/?groups=emmy_nominee
+    summary: Emmy Nominees
+
 dynamic_collections:
   Emmy Awards:
     type: number
