--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -60,6 +60,7 @@ dynamic_collections:
     title_override:
       Biography: Biopic
     exclude:
+      - Awards Show
       - Reality
       - Talk
       - Talk Show
