--- a/PMM/movie/franchise.yml
+++ b/PMM/movie/franchise.yml
@@ -26,6 +26,11 @@
 #          item_radarr_tag:                                 #
 #############################################################
 
+external_templates:
+  repo: PMM/templates
+  template_variables:
+    collection_section: "70"
+
 templates:
   collection:
     default:
@@ -38,6 +43,7 @@ templates:
       - name_mapping
       - sort_title
       - build_collection
+      - poster_url
     cache_builders: 1
     minimum_items: <<minimum_items>>
     tmdb_collection_details: <<value>>
@@ -45,6 +51,7 @@ templates:
     name_mapping: <<name_mapping>>
     sort_title: <<sort_title>>
     build_collection: <<build_collection>>
+    url_poster: <<poster_url>>
     sync_mode: sync
     collection_order: <<collection_order>>
     radarr_add_missing: <<radarr_add_missing>>
@@ -53,7 +60,9 @@ dynamic_collections:
   TMDb Collections:
     type: tmdb_collection
     remove_suffix: "Collection"
-    template: collection
+    template:
+      - collection
+      - shared
     include:
       - 33938     # Airport
       - 687929    # Baztan Trilogy
@@ -81,8 +90,8 @@ dynamic_collections:
         - 135416    # Prometheus
       86066:      # Despicable Me
         - 544669    # Minions
-      86115:      # Garfield
-        - 373918    # Garfield CGI
+#      86115:      # Garfield
+#        - 373918    # Garfield CGI
       748:        # X-Men
         - 453993    # The Wolverine
     title_override:
@@ -91,6 +100,8 @@ dynamic_collections:
 #      121938: The Hobbit
       119: Lord of the Rings
 #      47814: The Thin Man
+    key_name_override:
+      Once were Warriors: Once Were Warriors
     template_variables:
       movie:
 #        1582: 1273  # Teenage Mutant Ninja Turtles: TMNT
@@ -108,3 +119,8 @@ dynamic_collections:
 #        115570: Star Trek The Next Generation
 #        151: Star Trek The Original Series
 #        10: Star Wars Skywalker Saga
+      poster_url:
+        97461: https://theposterdb.com/api/assets/84708                       #Lilo & Stitch
+        460467: https://theposterdb.com/api/assets/169962                          #Space Battleship Yamato
+        33938: https://theposterdb.com/api/assets/25081                                  #Airport
+        687929: https://www.themoviedb.org/t/p/original/pxaOzqzfZfDQRGIif7OfZkhayye.jpg     #Baztan Trilogy
