--- a/PMM/actor.yml
+++ b/PMM/actor.yml
@@ -43,6 +43,7 @@ templates:
       sort_by: <<sort_by>>
       all:
         actor: tmdb
+    schedule: monthly(15)
 
 collections:
   Actors Collections:
