--- a/PMM/movie/director.yml
+++ b/PMM/movie/director.yml
@@ -41,6 +41,7 @@ templates:
       sort_by: <<sort_by>>
       all:
         director: tmdb
+    schedule: monthly(15)
  
 collections:
   Directors Collections:
