--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -34,7 +34,7 @@ templates:
   genre_dynamic:
     default:
       sort_by: release.desc
-    url_poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+    url_poster: <<poster_url>>   # https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
     smart_filter:
       sort_by: <<sort_by>>
       all:
@@ -77,6 +77,7 @@ dynamic_collections:
       - Science Fiction
       - Short
       - Sport
+      - Western
     addons:
       Action:
         - Action/Adventure
@@ -105,3 +106,17 @@ dynamic_collections:
         - Science Fiction & Fantasy
         - Sci-Fi & Fantasy
         - Fantasy
+    template_values:
+      poster_url:
+        Action: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # ActionAdventure
+        Family: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+        Game Show: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+        Home and Garden: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # HomeHowTo
+        Horror: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # HorrorThriller (and Suspense)
+        Mystery: https://theposterdb.com/api/assets/118940
+        Romance: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+        Science Fiction: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # SciFiFantasy
+        Short: https://theposterdb.com/api/assets/53063
+        Sport: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+        Western: https://theposterdb.com/api/assets/231005
+ 
