--- a/PMM/award/cannes.yml
+++ b/PMM/award/cannes.yml
@@ -31,7 +31,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 16
 
