--- a/PMM/award/choice.yml
+++ b/PMM/award/choice.yml
@@ -39,7 +39,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 16
 
