--- a/PMM/award/emmy.yml
+++ b/PMM/award/emmy.yml
@@ -36,7 +36,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 16
 
