--- a/PMM/award/golden.yml
+++ b/PMM/award/golden.yml
@@ -37,7 +37,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 16
 
