--- a/PMM/chart/anilist.yml
+++ b/PMM/chart/anilist.yml
@@ -58,7 +58,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "01"
 
