--- a/PMM/chart/imdb.yml
+++ b/PMM/chart/imdb.yml
@@ -55,7 +55,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "01"
 
