--- a/PMM/chart/other.yml
+++ b/PMM/chart/other.yml
@@ -56,7 +56,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "01"
 
