--- a/PMM/chart/tmdb.yml
+++ b/PMM/chart/tmdb.yml
@@ -59,7 +59,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "01"
 
