--- a/PMM/chart/trakt.yml
+++ b/PMM/chart/trakt.yml
@@ -62,7 +62,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "01"
 
