--- a/PMM/resolution_standards.yml
+++ b/PMM/resolution_standards.yml
@@ -28,7 +28,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 15
 
