--- a/PMM/show/country.yml
+++ b/PMM/show/country.yml
@@ -29,7 +29,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "09"
 
