--- a/PMM/streaming.yml
+++ b/PMM/streaming.yml
@@ -72,7 +72,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: "03"
 
