--- a/PMM/year.yml
+++ b/PMM/year.yml
@@ -30,7 +30,7 @@
 #############################################################
 
 external_templates:
-  git: PMM/templates
+  repo: PMM/templates
   template_variables:
     collection_section: 13
 
