--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -117,6 +117,6 @@ dynamic_collections:
         Romance: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
         Science Fiction: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # SciFiFantasy
         Short: https://theposterdb.com/api/assets/53063
-        Sport: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+        Sport: https://theposterdb.com/api/assets/67700
         Western: https://theposterdb.com/api/assets/231005
  
