--- a/PMM/genre.yml
+++ b/PMM/genre.yml
@@ -32,9 +32,12 @@ external_templates:
 
 templates:
   genre_dynamic:
+    optional:
+      - poster_file
     default:
       sort_by: release.desc
     url_poster: <<poster_url>>   # https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
+    file_poster: <<poster_file>>
     smart_filter:
       sort_by: <<sort_by>>
       all:
@@ -112,7 +115,6 @@ dynamic_collections:
       poster_url:
         Action: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # ActionAdventure
         Animation: https://theposterdb.com/api/assets/189383
-        Family: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
         Game Show: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg
         Home and Garden: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # HomeHowTo
         Horror: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/<<key_name_encoded>>.jpg   # HorrorThriller (and Suspense)
@@ -122,4 +124,5 @@ dynamic_collections:
         Short: https://theposterdb.com/api/assets/53063
         Sport: https://theposterdb.com/api/assets/67700
         Western: https://theposterdb.com/api/assets/231005
- 
+      poster_file:
+        Family: config/family2.png
