--- a/PMM/movie/seasonal.yml
+++ b/PMM/movie/seasonal.yml
@@ -100,6 +100,7 @@ collections:
       - https://www.imdb.com/list/ls057783436/
       - https://www.imdb.com/list/ls064427905/
     tmdb_keyword: 160404
+    url_poster: https://theposterdb.com/api/assets/212641
 
   St. Patrick's Day:
     template:
